[GTK3] invalid rendering of FX app stage in case of scaling

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • linux_ubuntu

      JDK9 b122 + Ubuntu 16.04 Linux (Unity) + HiDPI (scale = 2).

      Please run the attached test code (just one of the ensemble demos).

      The rendering is invalid - see "NOK" screenshot.
      + cannot hit into the buttons when trying to click


      The issue is also reproducible in case of non-HiDPI display

        1. ChangeListenerSample.java
          4 kB
        2. NOK.png
          NOK.png
          46 kB
        3. NOK-2.png
          NOK-2.png
          170 kB

            Assignee:
            Jim Graham
            Reporter:
            Alexander Stepanov (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: