8159892: [GTK3] invalid rendering of FX app stage in case of scaling

Reviewed-by: kcr, ddhill